# TouchScreen_LVGL

./: README.md
SquareLine_Project/: README.md
SquareLine_Project/libraries/: lv_conf.h
SquareLine_Project/libraries/Current_Sensor/: Current_WCS.cpp  Current_WCS.h
SquareLine_Project/libraries/TFT_eSPI/: User_Setup.h
SquareLine_Project/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
SquareLine_Project/libraries/ui/src/fonts/: ui_font_Font1.c  ui_font_M030.c  ui_font_M050.c  ui_font_MO16.c  ui_font_MOKO18.c  ui_font_MOKO210.c  ui_font_MOKO8.c
SquareLine_Project/libraries/ui/src/images/: ui_img_82773809.c  ui_img_slider_battery_png.c  ui_img_speed_slider_png.c
SquareLine_Project/libraries/ui/src/screens/: ui_Label_speed.c
SquareLine_Project/ui/: ui.ino
